# openmadoola

./: .gitignore  BUILDING.md  CMakeLists.txt  FLATPAK.md  README.md
.github/workflows/: main.yml
demo/: stage1.dem  stage3.dem  stage5.dem
libs/libco/: aarch64.c  amd64.c  arm.c  ppc.c  ppc64v2.c  sjlj.c  ucontext.c  x86.c
libs/nes_apu/: Blip_Buffer.cpp  Blip_Buffer.h  Blip_Buffer_impl.h  Nes_Apu.h  Nes_Apu_Base.h  Simple_Apu.cpp  Simple_Apu.h
mml/: README.md
src/: alloc.c  alloc.h  bg.c  bg.h  camera.c  camera.h  constants.h  db.c  db.h  enemy.c  file.c  file.h  game.c  game.h  graphics.c  graphics.h  hud.c  hud.h  joy.c  licenses.c  licenses.h  main.c  mainmenu.c  map.c  map.h  object.c  object.h  options.c  palette.h  pausemenu.c  pausemenu.h  platform.h  platform_sdl2.c  platform_sdl3.c  rom.c  save.c  save.h  sound.c  sound.cpp  sound.h  (+5 more)
src/objects/: biforce.c  bospido.c  bunyon.c  daltos.c  daltos.h  dopipu.c  fire.c  fireball.c  hopegg.c  joylimer.c  joylimer.h  kikura.c  lucia.c  lucia.h  magicbomb.c  mantleskull.c  nipata.c  nishiga.c  nomaji.c  peraskull.c  spajyan.c  suneisa.c  sword.c  wingofmadoola.c  yokkochan.c  zadofly.c
